--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
         <item>Budući kvizovi</item>
         <item>Prošli kvizovi (neurađeni)</item>
     </string-array>
+    <string-array name="godina_choice_array">
+        <item>1. godina</item>
+        <item>2. godina</item>
+        <item>3. godina</item>
+        <item>4. godina</item>
+        <item>5. godina</item>
+    </string-array>
 </resources>
